--- a/4_WebFront/2_CSS/06_선택자 우선순위.html
+++ b/4_WebFront/2_CSS/06_선택자 우선순위.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>06_선택자 우선순위</title>
-    <link rel="stylesheet" href="css/selector6.css">
+    <link rel="stylesheet" href="css1/selector6.css">
 </head>
+
 <body>
     <h1>CSS 선택자 우선 순위</h1>
     <pre>
@@ -32,4 +33,5 @@
     <div class="cls1" id="test1" style="background-color: palevioletred;">우선순위 테스트</div>
 
 </body>
+
 </html>
