--- a/4_WebFront/2_CSS/연습문제/1_레이아웃 연습문제1.html
+++ b/4_WebFront/2_CSS/연습문제/1_레이아웃 연습문제1.html
@@ -9,7 +9,9 @@
 
 <body>
     <div class="container-1">
-        <div></div>
+        <div>
+            <div></div>
+        </div>
         <div></div>
         <div></div>
         <div>이미지</div>
@@ -29,28 +31,61 @@
         </div>
     </div>
 
-   <div class="container-4">
-        <div class="row-1">
-            <div>
-                <div class="circle"></div>
-            </div>
-            <div>
-                <div class="circle"></div>
-            </div>
-            <div>
-                <div class="circle"></div>
-            </div>
-            <div>
-                <div class="circle"></div>
+    <div class="container-4">
+        <div>
+            <div class="circle">
+                <div class="icon" id="naver-icon"></div>
             </div>
         </div>
-        <div class="row-2">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div>
+            <div class="circle">
+                <div class="icon" id="notion-icon"></div>
+            </div>
         </div>
-   </div>
+        <div>
+            <div class="circle">
+                <div class="icon" id="chatGPT-icon"></div>
+            </div>
+        </div>
+        <div>
+            <div class="circle">
+                <div class="icon" id="document-icon"></div>
+            </div>
+        </div>
+
+        <div class="name">NAVER</div>
+        <div class="name">notion</div>
+        <div class="name">ChatGPT</div>
+        <div class="name">File</div>
+    </div>
+
+    <div class="container-4">
+        <div>
+            <div class="circle">
+                <div class="icon" id="document-icon"></div>
+            </div>
+        </div>
+        <div>
+            <div class="circle">
+                <div class="icon" id="KHacademy-icon"></div>
+            </div>
+        </div>
+        <div>
+            <div class="circle">
+                <div class="icon" id="google-icon"></div>
+            </div>
+        </div>
+        <div>
+            <div class="circle">
+                <div class="icon" id="youtube-icon"></div>
+            </div>
+        </div>
+
+        <div class="name">IP</div>
+        <div class="name">KHacademy</div>
+        <div class="name">google</div>
+        <div class="name">YouTube</div>
+    </div>
 
 </body>
 
