구글 만들기 숙제 최종

--- a/4_WebFront/2_CSS/연습문제/1_레이아웃 연습문제1.html
+++ b/4_WebFront/2_CSS/연습문제/1_레이아웃 연습문제1.html
@@ -87,6 +87,11 @@
         <div class="name">YouTube</div>
     </div>
 
+    <div class="setting">
+        <div></div>
+        Chrome 맞춤설정
+    </div>
+
 </body>
 
 </html>
