구글 만들기 두번째

--- a/4_WebFront/2_CSS/연습문제/1_레이아웃 연습문제1.html
+++ b/4_WebFront/2_CSS/연습문제/1_레이아웃 연습문제1.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="name">NAVER</div>
-        <div class="name">notion</div>
+        <div class="name">Notion</div>
         <div class="name">ChatGPT</div>
         <div class="name">File</div>
     </div>
