스타벅스 작업 중2

--- a/4_WebFront/2_CSS/연습문제/3_starbucks.html
+++ b/4_WebFront/2_CSS/연습문제/3_starbucks.html
@@ -61,7 +61,7 @@
 
                 <section class="line-notice-right">
                     <span>스타벅스 프로모션</span>
-                    <button></button>
+                    <button class="fa-solid fa-angle-down"></button>
                 </section>
 
             </section>
