자바스크립트 개요, 데이터 입출력, 요소접근방법

--- a/4_WebFront/2_CSS/연습문제/3_starbucks.html
+++ b/4_WebFront/2_CSS/연습문제/3_starbucks.html
@@ -46,8 +46,17 @@
             </section>
         </header>
 
-        <div class="content">
-        </div>
+        <main class="content">
+            <div>MERRIER<br>TOGETHER</div>
+            <button>자세히 보기</button>
+            <img src="../../images/2024_december_top_drink01.png" alt="">
+            <img src="../../images/2024_december_top_drink04.png" alt="">
+            <img src="../../images/2024_december_top_drink03.png" alt="">
+            <img src="../../images/2024_december_top_drink02.png" alt="">
+            <img src="../../images/2024_december_top_drink05.png" alt="">
+            <img src="../../images/starbucks-event.png" alt="">
+            
+        </main>
 
         <footer>
 
@@ -60,7 +69,7 @@
                 </section>
 
                 <section class="line-notice-right">
-                    <span>스타벅스 프로모션</span>
+                    <span><strong>스타벅스 프로모션</strong></span>
                     <button class="fa-solid fa-angle-down"></button>
                 </section>
 
