window 내장 객체, 객체, DOM, 요소추가제거

--- a/4_WebFront/3_JS/15_회원가입양식.html
+++ b/4_WebFront/3_JS/15_회원가입양식.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>15_회원가입양식</title>
+
+    <style>
+        .confirm{color : green;}
+        .error{color: red;}
+    </style>
 </head>
 
 <body>
@@ -13,40 +18,40 @@
                 <table>
                     <tr>
                         <td>아이디</td>
-                        <td><input type="text" id="idCheck"></td>
+                        <td><input type="text" id="inputId"></td>
                         <td><button>중복확인</button></td>
                     </tr>
 
                     <tr>
                         <td>비밀번호</td>
-                        <td><input type="password" id="pw"></td>
+                        <td><input type="password" id="inputPw"></td>
                         <td><span id="pwMatch"></span></td>
                     </tr>
 
                     <tr>
                         <td>비밀번호 확인</td>
-                        <td><input type="password" id="pwCheck"></td>
+                        <td><input type="password" id="inputPwConfirm"></td>
                         <td></td>
                     </tr>
 
                     <tr>
                         <td>이름</td>
-                        <td><input type="text" id="name"></td>
+                        <td><input type="text" id="inputName"></td>
                         <td><span id="nameCheck"></span></td>
                     </tr>
 
                     <tr>
                         <td>성별</td>
                         <td>
-                            남<input type="radio" name="gender" value = "male" class="radio">
-                            여<input type="radio" name="gender" value = "female" class="radio">
+                            남<input type="radio" name="gender" value="male" id="male">
+                            여<input type="radio" name="gender" value="female" id="female">
                         </td>
                         <td></td>
                     </tr>
 
                     <tr>
                         <td>전화번호</td>
-                        <td><input type="tel" id="phone"></td>
+                        <td><input type="tel" id="inputTel"></td>
                         <td></td>
                     </tr>
 
@@ -59,8 +64,8 @@
                     <tr>
                         <td></td>
                         <td>
-                            <button>초기화</button>
-                            <button onclick="validate()">회원가입</button>
+                            <button type="reset" id="resetBtn">초기화</button>
+                            <button type="submit">회원가입</button>
                         </td>
                         <td></td>
                     </tr>
