기본적인 함수의 선언, 정의, 호출

--- a/4_WebFront/3_JS/17_객체.html
+++ b/4_WebFront/3_JS/17_객체.html
@@ -19,7 +19,7 @@
     <h1>자바스크립트 객체</h1>
 
     <pre>
-        자바스크립트의 객체는 {} 중괄호 내에 Ket:Value가 모여있는 형태로 작성된다.
+        자바스크립트의 객체는 {} 중괄호 내에 Key:Value가 모여있는 형태로 작성된다.
                                           (Map 형식)
 
         { K:V, K:V, K:V } // 자바스크립트 객체
