--- a/4_WebFront/3_JS/19_요소추가제거.html
+++ b/4_WebFront/3_JS/19_요소추가제거.html
@@ -15,7 +15,7 @@
         /* input 태그 */
         .in{ width: 100px;}
 
-        /* span 태그 */
+        /* span 태그 (X버튼) */
         .remove{
             border: 1px solid black;
             border-radius: 50%;
