--- a/4_WebFront/3_JS/20_로그인연습문제.html
+++ b/4_WebFront/3_JS/20_로그인연습문제.html
@@ -57,12 +57,24 @@
 
     <script>
         // 1. 이 문서를 처음 로드하면 로그인 화면은 보이지 않는다.
+        document.getElementById("myForm").style.display = "none";
 
         // 2. label 태그는 가로로 '80px' 크기를 갖는다.
+        const label = document.getElementsByTagName("label");
+        for(let i=0; i<label.length; i++){
+            label[i].style.width = "80px";
+            label[i].style.display = "inline-block";
+        }
 
         // 3. 로그인 버튼을 클릭하면 로그인 화면이 화면에 나타난다.
+        document.getElementsByClassName("open")[0].addEventListener("click", function(){
+            document.getElementById("myForm").style.display = "block";
+        })
 
         // 4. Close 버튼을 클릭하면 로그인 화면이 사라진다.
+        document.getElementsByClassName("cancel")[0].addEventListener("click", function(){
+            document.getElementById("myForm").style.display = "none";
+        })
     </script>
 </body>
 
