--- a/4_WebFront/화면프로젝트/김세하/main.html
+++ b/4_WebFront/화면프로젝트/김세하/main.html
@@ -5,21 +5,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aespa - YouTube</title>
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/d7dbfff85e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <div>햄버거</div>
-        <div>로고</div>
-        <div>
-            <div>키보드</div>
-            <div>X</div>
-            <div>검색</div>
-        </div>
-        <div>마이크</div>
-        <div>세로점</div>
-        <div>로그인</div>
+        <section class="header-left">
+            <div></div>
+            <div></div>
+        </section>
+
+        <section class="header-center">
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+
+        <section class="header-right">
+            <div><i class="fa-solid fa-microphone"></i></div>
+            <div></div>
+            <div><i class="fa-solid fa-ellipsis-vertical"></i></div>
+            <div>
+                <div></div>로그인
+            </div>
+        </section>
     </header>
+
+    <main>
+        <section class="sidebar">
+            <div>
+                <div class="sidebar-home">
+                   <div></div>
+                   <div>홈</div>
+                </div>
+                <div><img src="img/shorts.png" width="30px" height="30px" alt=""><p>Shorts</p></div>
+                <div>구독</div>
+            </div>
+
+            <div>내 페이지</div>
+            <div>시청 기록</div>
+            <div>로그인하면 동영상에 좋아요를 표시하고 댓글을 달거나 구독할 수 있습니다.</div>
+            <button>로그인</button>
+            <div>탐색
+                <div>인기 급상승</div>
+                <div>쇼핑</div>
+                <div>음악</div>
+                <div>영화</div>
+                <div>실시간</div>
+                <div>게임</div>
+                <div>스포츠</div>
+                <div>학습 프로그램</div>
+                <div>팟캐스트</div>
+            </div>
+        </section>
+        
+        <section class="main-center">
+
+            <div class="bannerImage">배너</div>
+
+            <section class="channel-container">
+                <div class="channel-logo"></div>
+
+                <div class="channel-content">
+                    <p>aespa</p>
+                    <p><strong>@aespa</strong> 구독자 677만명 동영상 1.1천개</p>
+                    <p>aespa 에스파 The 5th Mini Album 〖Whiplash〗...더보기</p>
+                    <p><a href="">aespa.lnk.to/Whiplash</a> 외 링크 4개</p>
+                    <button class="subscribe">구독</button>
+                </div>
+            </section>
+
+            <section class="nav">
+                <div>홈</div>
+                <div>동영상</div>
+                <div>Shorts</div>
+                <div>라이브</div>
+                <div>재생목록</div>
+                <div>커뮤니티</div>
+                <div>검색</div>
+            </section>
+
+            <section class="main-video">
+                <iframe width="420" height="250" style ="border-radius: 1em" src="https://www.youtube.com/embed/jWQx2f-CErU?si=jiiTdm00ivLIMtlM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                <div class="black-mamba-content">
+                    <p><strong>aespa 에스파 'Whiplash' MV</strong></p>
+                    <p>조회수 93,291,000회 2개월 전</p>
+                    <p>aespa's 5th mini album "Whiplash" is out!<br>
+                        Listen and download on your favorite platform: <a href="">https://aespa.lnk.to/Whiplash</a> <br><br>
+                    <a href="">https://aespa.com</a><br><br>
+                        
+                    [Tracklist]<br>
+                    01. Whiplash<br>
+                    02. Kill It<br>
+                    03. Flights, Not Feelings <br>
+                    04. Pink Hoodie ...더보기<br>
+                </div>
+            </section>
+        </section>
+        <div></div>
+    </main>
 
     <main>
 
