개인프로젝트 완성

--- a/4_WebFront/화면프로젝트/김세하/main.html
+++ b/4_WebFront/화면프로젝트/김세하/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aespa - YouTube</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/d7dbfff85e.js" crossorigin="anonymous"></script>
 </head>
 
@@ -25,37 +25,87 @@
             <div><i class="fa-solid fa-microphone"></i></div>
             <div></div>
             <div><i class="fa-solid fa-ellipsis-vertical"></i></div>
-            <div>
-                <div></div>로그인
-            </div>
+            <button type="button" class="loginBtn" onclick="location.href='login.html'">
+                <img src="img/login.png" width="28px" height="28px">
+                <p>로그인</p>
+            </button>
         </section>
     </header>
 
     <main>
         <section class="sidebar">
-            <div>
-                <div class="sidebar-home">
-                   <div></div>
-                   <div>홈</div>
+            <div class="sidebar-block">
+                <div>
+                   <img src="img/sidebar-home.png" width="30px" height="30px">
+                   <p>홈</p>
                 </div>
-                <div><img src="img/shorts.png" width="30px" height="30px" alt=""><p>Shorts</p></div>
-                <div>구독</div>
+                <div>
+                    <img src="img/sidebar-shorts.png" width="30px" height="30px">
+                    <p>Shorts</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-subscribe.png" width="30px" height="30px">
+                    <p>구독</p>
+                </div>
             </div>
 
-            <div>내 페이지</div>
-            <div>시청 기록</div>
-            <div>로그인하면 동영상에 좋아요를 표시하고 댓글을 달거나 구독할 수 있습니다.</div>
-            <button>로그인</button>
-            <div>탐색
-                <div>인기 급상승</div>
-                <div>쇼핑</div>
-                <div>음악</div>
-                <div>영화</div>
-                <div>실시간</div>
-                <div>게임</div>
-                <div>스포츠</div>
-                <div>학습 프로그램</div>
-                <div>팟캐스트</div>
+            <div class="sidebar-block">
+                <div>
+                    <img src="img/sidebar-mypage.png" width="30px" height="30px">    
+                    <p>내 페이지</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-viewhistory.png" width="30px" height="30px">
+                    <p>시청 기록</p>
+                </div>
+            </div>
+
+            <div class="sidebar-login">
+                <p>로그인하면 동영상에 좋아요를 표시하고 댓글을 달거나 구독할 수 있습니다.</p>
+                <button type="button" class="loginBtn" onclick="location.href='login.html'">
+                    <img src="img/login.png"width="28px" height="28px">
+                    <p>로그인</p>
+                </button>
+            </div>
+
+            <div class="sidebar-block">
+                <p>탐색</p>
+                <div>
+                    <img src="img/sidebar-hot.png" width="30px" height="30px">
+                    <p>인기 급상승</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-shopping.png" width="30px" height="30px">
+                    <p>쇼핑</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-music.png" width="30px" height="30px"">
+                    <p>음악</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-movie.png" width="30px" height="30px">
+                    <p>영화</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-live.png" width="30px" height="30px">
+                    <p>실시간</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-game.png" width="30px" height="30px">
+                    <p>게임</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-sports.png" width="30px" height="30px">
+                    <p>스포츠</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-eduProgram.png" width="30px" height="30px">
+                    <p>학습 프로그램</p>
+                </div>
+                <div>
+                    <img src="img/sidebar-podCast.png" width="30px" height="30px">
+                    <p>팟캐스트</p>
+                </div>
             </div>
         </section>
         
@@ -79,36 +129,31 @@
                 <div>홈</div>
                 <div>동영상</div>
                 <div>Shorts</div>
-                <div>라이브</div>
+                <div>발표곡</div>
                 <div>재생목록</div>
                 <div>커뮤니티</div>
                 <div>검색</div>
             </section>
 
             <section class="main-video">
-                <iframe width="420" height="250" style ="border-radius: 1em" src="https://www.youtube.com/embed/jWQx2f-CErU?si=jiiTdm00ivLIMtlM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="420" height="236" style ="border-radius: 1em" src="https://www.youtube.com/embed/jWQx2f-CErU?si=jiiTdm00ivLIMtlM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                <div class="black-mamba-content">
+                <div class="player-content">
                     <p><strong>aespa 에스파 'Whiplash' MV</strong></p>
-                    <p>조회수 93,291,000회 2개월 전</p>
+                    <p>조회수 93,291,000회 · 2개월 전</p>
                     <p>aespa's 5th mini album "Whiplash" is out!<br>
-                        Listen and download on your favorite platform: <a href="">https://aespa.lnk.to/Whiplash</a> <br><br>
-                    <a href="">https://aespa.com</a><br><br>
+                        Listen and download on your favorite platform:<br>
+                        <a href="">https://aespa.lnk.to/Whiplash</a> <br><br>
+                    <a href="">🔗 https://aespa.com</a><br>
                         
-                    [Tracklist]<br>
-                    01. Whiplash<br>
-                    02. Kill It<br>
-                    03. Flights, Not Feelings <br>
-                    04. Pink Hoodie ...더보기<br>
+                    <p>[Tracklist]...</p>
+                    <p>자세히 알아보기</p><br>
                 </div>
             </section>
         </section>
         <div></div>
     </main>
 
-    <main>
-
-    </main>
 </body>
 
 </html>
