--- a/5_Server/JSPProject3/src/main/webapp/index.html
+++ b/5_Server/JSPProject3/src/main/webapp/index.html
@@ -12,7 +12,7 @@
     <pre>
         JSP에서 자주 사용되거나 공통적으로 사용되는 Java문법(코드)를
         스크립틀릿 대신 HTML 태그 형식으로 태그화 하여
-        표준으로 제공하는 라이브러리(아파티 제단에서 제공)
+        표준으로 제공하는 라이브러리(아파치 제단에서 제공)
 
         - if, for, 변수 선언(scope 지정 가능), 변수 제거(scope 지정 가능), 형변환,
           문자열, 숫자, 날짜 관련 포맷 지정 가능
